--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Zhizhi100.GitHub.io
 description: 
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-minimal
+theme: jekyll-theme-architect
 
 gems:
   - jekyll-mentions
